mongo_k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mongo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      resource: mongodb-pod
  template:
    metadata:
      labels:
        resource: mongodb-pod
    spec:
      containers:
      - name: mongodb
        image: mongo
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 27017
