mongo_k8s/mongoexpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
  namespace: mongo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      resource: mongoexpress-pod
  template:
    metadata:
      labels:
        resource: mongoexpress-pod
    spec:
      containers:
      - name: mongoexpress
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8081
