mongo_k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongo-dev
spec:
  selector:
    resource: mongodb-pod
  ports:
  - port: 27017
    targetPort: 27017
