mongo_k8s/mongoexpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  namespace: mongo-dev
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: mongo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongoexpress-service
            port: 
              number: 8081
